<resources>

    <string name="app_name">TranSportClient</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">个人中心</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="tab_text_1">发送成功</string>
    <string name="tab_text_2">未发送</string>
    <string name="data">data=</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">code</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid phoneNumber</string>
    <string name="invalid_password">Please input a code must > 5</string>
    <string name="login_failed">"Login failed"</string>
    <string name="end">结束扫描</string>
    <string name="todo">TODO</string>
    <string name="recorddetail">记录详情</string>
    <string name="yt">圆通</string>
    <string name="qhm">取货码</string>
    <string name="inputQhm">请输入取货码</string>
    <string name="sendTotal">发送总条数：</string>
    <string name="_111">111条</string>
    <string name="qhm_">取货码</string>
    <string name="sms1">【遵旨】您的</string>
    <string name="sms11">快递快件已经到达</string>
    <string name="sms2">请输入快递点地址</string>
    <string name="sms3">请尽快来取，快递员电话</string>
    <string name="sms4">请输入电话</string>
    <string name="sms5">用遵旨app一元代取快递</string>
    <string name="send">发送</string>
    <string name="sms_c">短信充值</string>
    <string name="input_sms_tc">请选择短信套餐：</string>
    <string name="_1100">1100条</string>
    <string name="_50">50元</string>
    <string name="_2500">2500条</string>
    <string name="_100">100元</string>
    <string name="_5000">5000条</string>
    <string name="history">历史记录</string>
    <string name="todaySc">今日发送成功</string>
    <string name="wT">今日未发送</string>
    <string name="choose">选择开始日期</string>
    <string name="etc">-----</string>
    <string name="che">选择结束日期</string>
    <string name="search">搜索</string>
    <string name="ch">充值记录</string>
    <string name="yut">圆通</string>
    <string name="qhmm">取货码</string>
    <string name="inq">请输入取货码</string>
    <string name="_12">12</string>
    <string name="a_111">A</string>
    <string name="_222111">111</string>
    <string name="st">发送总条数：</string>
    <string name="phon">手机号</string>
    <string name="inad">请输入快递点地址</string>
    <string name="inqhm">,请凭取货码</string>
    <string name="qhm_l">#取货码位置</string>
    <string name="qhm_dh">请尽快来取，快递员电话</string>
    <string name="in_ph">请输入电话</string>
    <string name="app">用遵旨app一元代取快递</string>
    <string name="se">发送</string>
    <string name="personCenrral">个人中心</string>
    <string name="loginAccount">登陆账号：</string>
    <!--扫一扫-->
    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="close">关闭</string>
    <string name="auto_scan_notification">将扫描内容放入框内，即可自动扫描</string>
    <string name="notification">提示</string>
    <string name="positive_button_confirm">确认</string>
    <string name="could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="camera_not_found">未检测到相机</string>
    <string name="is_qr_code_scanner">是否扫码 </string>
    <string name="is_open_flashlight">是否打开闪光灯 </string>
    <string name="take_photos">拍照识别号码</string>
    <string name="_1111111111">1111111111</string>
    <string name="_300">300</string>
    <string name="sy">剩余短信条数</string>
    <string name="cz">充值</string>
    <string name="czjl">充值记录</string>
    <string name="lsjl">历史记录</string>
    <string name="logout">退出登录</string>
    <string name="kdd">快递点</string>
    <string name="ytk">顺丰</string>
    <string name="yiunda">韵达</string>
    <string name="zto">中通</string>
    <string name="_2020_08_11_17_48_00">2020/08/11 17:48:00</string>
    <string name="sms_cz">短信充值</string>
    <string name="ddh">订单号：</string>
    <string name="_22222222222222222222222222">22222222222222222222222222</string>
    <string name="_20">20元</string>
    <string name="delete">删除</string>
    <string name="_20_01_9898_14323243343_app">【遵旨】您的圆通快递快件到达北门菜鸟，请凭取货码20–01-9898请尽快来取，快递员电话：14323243343 用微臣遵旨APP一元代取快递</string>
    <string name="_2020_08_13">2020/08/13</string>
    <string name="_2020_08_13_13_00">2020/08/13 13:00</string>
    <string name="_96">96条</string>
    <string name="send_success">发送成功</string>
    <string name="_10">10条</string>
    <string name="fail">未发送</string>
    <string name="de">删除</string>
    <string name="n_1_n_2"><![CDATA[温馨提示：\n 1.短信条数不限时间，用完为止，不可退款。\n 2.发送条数>剩余条数时可续费后继续发送，如未续费则只能发送剩余条数。]]></string>
    <string name="pay_choice">支付方式:</string>
    <string name="_10000">10000条</string>
    <string name="_200">200元</string>
    <string name="phs">手机号</string>
    <string name="_2020_08_13_15_05_23">2020/08/13 15:05:23</string>
    <string name="_11111111111">44</string>
    <string name="sc">删除</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="get_code">获取验证码</string>
    <string name="phnum">手机号</string>
    <string name="re">注册</string>

</resources>