<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NYTActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/yt"
            android:textAlignment="center"
            android:textSize="20dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/get_num_nyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/qhm">

            </CheckBox>

            <TextView
                android:id="@+id/today_date_nyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12">

            </TextView>

            <EditText
                android:id="@+id/getNum_edt_nyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/inputQhm"
                android:text="A 111">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:text="@string/sendTotal">

            </TextView>

            <TextView
                android:id="@+id/fsts_txt_nyt"
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_111">


            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="50dp"
                android:text="手机号">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="20dp"
                android:text="@string/qhm_">

            </TextView>

        </LinearLayout>

        <ListView
            android:id="@+id/yt_listview_nyt"
            android:layout_width="match_parent"
            android:layout_height="450dp">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms1">

            </TextView>

            <EditText
                android:id="@+id/input_address_nyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sms2">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms3">

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_ph_nyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sms4">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms5">

            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/send_nyt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/send"
            android:textAlignment="center"
            tools:ignore="RtlCompat">

        </Button>


        <com.example.transportclient.CustomFAB
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/scan_btn"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/light_blue"
            android:src="@android:drawable/ic_input_add"
            android:tint="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>